--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ MONGODB_URL = "mongodb+srv://murali:murali@task-management.thavdgf.mongodb.net/T
 ACCESS_TOKEN_SECRET = Rj2S?RVe9[]8-dCS6A**&b5Tsg$gwbg~Bd{*QTK}
 
 
-# mongodb+srv://murali:murali@123@task-management.thavdgf.mongodb.net/
+# mongodb+srv://murali:murali@123@task-management.thavdgf.mongodb.net/<Your database>
 # mongodb+srv://murali:murali@123@task-management.thavdgf.mongodb.net/?retryWrites=true&w=majority&appName=Task-Management
